--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "typescript": "~3.9.7"
   },
   "dependencies": {
+    "@aws-cdk/aws-ec2": "^1.104.0",
     "@aws-cdk/core": "1.104.0",
     "source-map-support": "^0.5.16"
   }
