--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
     "cdk": "cdk"
   },
   "devDependencies": {
-    "@aws-cdk/assert": "1.104.0",
-    "@types/jest": "^26.0.10",
+    "@aws-cdk/assert": "^1.104.0",
+    "@types/jest": "^26.0.23",
     "@types/node": "10.17.27",
     "aws-cdk": "1.104.0",
-    "jest": "^26.4.2",
+    "jest": "^26.6.3",
     "ts-jest": "^26.2.0",
     "ts-node": "^9.0.0",
     "typescript": "~3.9.7"
@@ -24,5 +24,8 @@
     "@aws-cdk/aws-ec2": "^1.104.0",
     "@aws-cdk/core": "1.104.0",
     "source-map-support": "^0.5.16"
+  },
+  "jest": {
+    "moduleFileExtensions": ["js"]
   }
 }
