--- a/package.json
+++ b/package.json
@@ -11,19 +11,19 @@
     "cdk": "cdk"
   },
   "devDependencies": {
-    "@aws-cdk/assert": "^1.104.0",
+    "@aws-cdk/assert": "^1.110.1",
     "@types/jest": "^26.0.23",
     "@types/node": "10.17.27",
-    "aws-cdk": "1.104.0",
+    "aws-cdk": "1.110.1",
     "jest": "^26.6.3",
     "ts-jest": "^26.2.0",
     "ts-node": "^9.0.0",
     "typescript": "~3.9.7"
   },
   "dependencies": {
-    "@aws-cdk/aws-ec2": "^1.104.0",
+    "@aws-cdk/aws-ec2": "^1.110.1",
     "@aws-cdk/aws-elasticloadbalancingv2": "^1.110.1",
-    "@aws-cdk/core": "1.104.0",
+    "@aws-cdk/core": "^1.110.1",
     "source-map-support": "^0.5.16"
   },
   "jest": {
