--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "@aws-cdk/aws-ec2": "^1.110.1",
     "@aws-cdk/aws-elasticloadbalancingv2": "^1.110.1",
+    "@aws-cdk/aws-secretsmanager": "^1.110.1",
     "@aws-cdk/core": "^1.110.1",
     "source-map-support": "^0.5.16"
   },
