--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "cdk": "cdk"
   },
   "devDependencies": {
-    "@aws-cdk/assert": "^1.110.1",
+    "@aws-cdk/assert": "^1.111.0",
     "@types/jest": "^26.0.23",
     "@types/node": "10.17.27",
     "aws-cdk": "1.110.1",
@@ -21,10 +21,11 @@
     "typescript": "~3.9.7"
   },
   "dependencies": {
-    "@aws-cdk/aws-ec2": "^1.110.1",
-    "@aws-cdk/aws-elasticloadbalancingv2": "^1.110.1",
-    "@aws-cdk/aws-secretsmanager": "^1.110.1",
-    "@aws-cdk/core": "^1.110.1",
+    "@aws-cdk/aws-ec2": "^1.111.0",
+    "@aws-cdk/aws-elasticloadbalancingv2": "^1.111.0",
+    "@aws-cdk/aws-rds": "^1.111.0",
+    "@aws-cdk/aws-secretsmanager": "^1.111.0",
+    "@aws-cdk/core": "^1.111.0",
     "source-map-support": "^0.5.16"
   },
   "jest": {
